--- a/projectOnePager.html
+++ b/projectOnePager.html
@@ -15,9 +15,20 @@
                  Kudos Points
              </div>
           </div> -->
-
            <div>
-               <table id="t01" style="width:100%;"> 
+            <table id="t01" style="width:100%;"> 
+                <thead>
+                  <tr>
+                      <th>Manager</th>
+                   </tr>
+                </thead>
+                <tbody>
+                   <tr>
+                       <td>BoJack Horse </td>
+                   </tr>
+                </tbody>
+             </table>
+               <table id="t02" style="width:100%;"> 
                  <thead>
                    <tr>
                        <th>Project Name</th>
@@ -31,21 +42,31 @@
                     </tr>
                  </tbody>
               </table>
-              <table id="t02" style="width:100%";> 
+              <table id="t03" style="width:100%";> 
                 <thead>
                   <tr>
                       <th>Technologies/Tools Required</th>
-                      <th>Estimated hours for completion</th>
                    </tr>
                 </thead>
                 <tbody>
                    <tr>
                        <td>HTML,CSS,Javascript</td>
+                   </tr>
+                </tbody>
+             </table>
+             <table id="t04" style="width:100%";> 
+                <thead>
+                  <tr>
+                      <th>Estimated hours for completion</th>
+                   </tr>
+                </thead>
+                <tbody>
+                   <tr>
                        <td>8 hours</td>
                    </tr>
                 </tbody>
              </table>
-             <table id="t03" style="width:100%";> 
+             <table id="t04" style="width:100%";> 
                 <thead>
                   <tr>
                     <th>Project Description</th>
@@ -53,13 +74,38 @@
                 </thead>
                 <tbody>
                    <tr>
-                      <td>ASCNSHVLIRHVGDRIVUYGSKGLRIUVGSLUKVGSLIYSEGVLSVGSB XVHSIUVHGSILKVB KHDUIVHISUVHSDK KHVIUSHVKSHVSOF XVHS</td>
+                      <td>
+                        <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's 
+                        tandard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make 
+                        a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
+                        remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing 
+                        Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions
+                        of Lorem Ipsum.
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,
+                        by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem 
+                        Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the
+                        Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a 
+                        dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks 
+                        reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
+                        </p>
+                        </td>
                    </tr>
                 </tbody>
              </table>
 
             </div>
-           
+          <!-- <div class="row">
+              <div class="col-md-6">
+                <div class="project-name">
+                            <h5>Project</h5>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="kudos-points">
+                            <h5>Kudos Points</h5>
+                </div>
+              </div>
+          </div> -->
         </div>
     </body>
     </html>
